test/sema/generics/explicit_generic_arguments_override_inferred.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: T }

fn foo<T>(x: T): unit {}

fn main(): unit {
  // CHECK: [[# @LINE + 2 ]]:16: error: cannot unify 'number' with 'unit'
  // CHECK: [[# @LINE + 1 ]]:11: error: field 'x' is not initialized
  S@<unit>{ x: 1 };

  // CHECK: [[# @LINE + 1 ]]:17: error: cannot unify 'number' with 'S<unit>'
  foo@<S<unit>>(1);
}

// CHECK-NOT: {{.*error.*}}

